# puch-mcp-hackathon

./: .env.example  Dockerfile  README.md  pyproject.toml
src/: intent.py  main.py
