[project]
name = "puchai-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "asyncpraw>=7.8.1",
    "fastmcp>=2.11.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
]
